apps/httpbin/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.local
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 80
